ApexWorkbook/src/objects/Delivery_Item__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Delivery Items</relationshipLabel>
        <relationshipName>Delivery_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <label>Delivery</label>
        <referenceTo>Delivery__c</referenceTo>
        <relationshipLabel>Delivery Items</relationshipLabel>
        <relationshipName>Delivery_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Delivery Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SKU__c</columns>
        <columns>Quantity__c</columns>
        <columns>Delivery__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Delivery Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>